--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,12 +1,16 @@
 {
-    "branches": ["main"],
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      "@semantic-release/changelog",
-      "@semantic-release/npm",
-      "@semantic-release/github",
-      "@semantic-release/git"
-    ]
-  }
-  
+  "repositoryUrl": "https://github.com/DrashtiBorad/my-monorepo",
+  "branches": ["main"],
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/changelog",
+    ["@semantic-release/github", {
+      "assets": ["dist/**"],
+      "successComment": false,
+      "failComment": false
+    }],
+    "@semantic-release/npm",
+    "@semantic-release/git"
+  ]
+}
