--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.1",
     "@semantic-release/npm": "^12.0.1",
+    "@types/react": "^19.0.10",
     "lerna": "^8.2.0",
     "semantic-release": "^24.2.3"
   }
