--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           node-version: 20
           registry-url: "https://registry.npmjs.org/"
+          always-auth: true
 
       - name: Install Dependencies
         run: npm ci
