--- a/packages/dui/package.json
+++ b/packages/dui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@drashtibrad/dui",
+  "name": "@drashtiborad/dui",
   "version": "1.0.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
